--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=Motor_IMU_Shield
-version=0.0.5
+version=0.2.0
 author=Michael Lazernik, Dillon Haughton
-maintainer=Arduino <mikelazer7@gmail.com>
+maintainer=Michael Lazernik <mikelazer7@gmail.com>
 sentence=Library For Custom IMU & Brushless Motor Driver Shield.
 paragraph=Library that facilitates the usage of Custom Brushless Motor Driver and IMU Shield using 4 Allegro Microsystems A4963 Brushless Motors and a Bosch Sensortec BNO055 IMU. See https://github.com/lazerj7/motor-imu-shield for more Info.
 category=Device Control
